# posthog_extraction

./: Dockerfile  handler.py  pyproject.toml  readme.md
dynamodb_manager/: manager.py
kinesis_sender/: sender.py
posthog_extractor/: extractor.py
tests/: test_dynamodb_manager.py  test_kinesis_sender.py
