[tool.poetry]
name = "posthog_extractor"
version = "0.1.0"
description = "Incremental extraction of PostHog data and sending to Kinesis stream."
authors = ["Muhammad Nouman Khalid"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
boto3 = "^1.19.0" 

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"